# pipeline-parallelism-rl

./: .gitignore  pyproject.toml
experiments/exp1-cloud-setup/: Dockerfile  docker-compose.yml  env.py  machine0.py  machine1.py  network.py
experiments/exp2-act-grad-acc/: Dockerfile  machine0.py  machine1.py  network.py
report/: generate_plots.py  report.aux  report.fdb_latexmk  report.fls  report.tex
report/data/: data_usage.csv  returns.csv
