[project]
name = "pipeline-parallelism-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.11",
    "gym==0.26.2",
    "gymnasium[box2d]==1.2.0",
    "glfw>=2.6",
    "mujoco==3.3.6",
    "torch==2.4.1",
    "moviepy>=1.0.3",
    "pygame>=2.1",
    "huggingface-hub>=0.11.1",
    "rich<12.0",
    "tenacity>=8.2.2",
    "tyro>=0.5.10",
    "swig>=4.3.1.post0",
    "torchviz>=0.0.3",
    "torchinfo>=1.8.0",
]
